user documentation moved to separate file

--- a/doc/cs/prace.tex
+++ b/doc/cs/prace.tex
@@ -237,31 +237,7 @@ Abstract.
 \appendix
 \chapter{Přílohy}
 
-\section{Uživatelská dokumentace}
-Popis všech funkcí + screenshoty?
-
-TODO: rozepsat mnohem více do detailu (krok po kroku + snímky obrazovky)
-
-(převzato ze specifikace ročníkového projektu)
-
-\subsection{Vytvoření a administrace kurzu}
-Uživatelé budou moci vytvářet nové kurzy, administrátoři daného kurzu budou moci přidávat a odebírat členy. Každý uživatel uvidí v aplikaci seznam kurzů, kam je přihlášen.
-
-\subsection{Vytváření a vyplňování testů}
-Administrátoři kurzu budou moci vytvářet testy, které budou žáci vyplňovat. V případě otázek s nabídkou odpovědí systém správnost sám vyhodnotí, otázky s volnou odpovědí budou hodnoceny ručně. Každý uživatel pak v daném kurzu uvidí seznam známek a bude si moci opravený test zobrazit a prohlédnout. Aplikace bude rozlišovat mezi testy a kvízy (kvízy se nebudou hodnotit známkou).
-
-\subsection{Odevzdávání a hodnocení úkolů}
-Uživatelé budou moci prostřednictvím aplikace odevzdávat úkoly, které jim budou poté ohodnoceny.
-
-\subsection{Správa obsahu kurzu}
-Administrátoři kurzu budou moci editovat obsah kurzu (např. přidávat nové materiály, soubory, apod.) 
-
-\subsection{Fórum k danému kurzu}
-U každého kurzu bude k dispozici fórum. 
-
-\subsection{Vytváření a správa účtů}
-Uživatelé si budou moci vytvářet nové účty, správci je budou moci do daného kurzu zapsat.
-
+\include{user-doc}
 
 \openright
 \end{document}
