added part of user documentation

--- a/doc/cs/kap02.tex
+++ b/doc/cs/kap02.tex
@@ -1209,7 +1209,7 @@ Pomocí atributu [(ngModel)] nastavíme proměnnou pro data binding.
 
 Pokud tedy například změníme ve formuláři váhu známky, dojde automaticky ke změně hodnoty gradeToAdd.weight. Podobně, pokud dojde v kódu ke změně hodnoty proměnné gradeToAdd.weight, framework automaticky upraví hodnotu ve formuláři.
 
-Ke stylování elementů používáme framework Bootstrap. 
+Ke stylování elementů používáme framework Bootstrap, který nám také zajišťuje, že uživatelské rozhraní aplikace je responzivní.
 
 \newpage
 
